--- a/check.xhtml
+++ b/check.xhtml
@@ -14,33 +14,36 @@
   <body onload="registerFields();"> 
     <h1>4. JavaScript Eingabeprüfung (informativ)</h1>
 
-    <p>Die <span class='required'>rot</span> markierten Pflichtfelder (*) müssen ausgefüllt werden!</p>
     <form action="confirm.html" id='formID1'>
-      <table>
-        <tr>
-          <td><span id="nameLbl" class='required'>Familienname (*): </span></td>
-					<td><input  id="nameFld" type="text" value="" /></td>
-        </tr>
-        <tr>
-          <td><span id="vornameLbl">Vorname: </span></td>
-					<td><input  id="vornameFld" type="text" value="" /></td>
-        </tr>
-        <tr>
-          <td><span id="plzLbl" class='required'>PLZ (*), vierstellig: </span></td>
-          <td><input  id="plzFld"  type="text" value="" placeholder='0000' /></td>
-        </tr>
-        <tr>
-          <td><span id="ortLbl" class='required'>Ort: </span></td>
-          <td><input  id="ortFld"  type="text" value="" placeholder='Ort' /></td>
-        </tr>
-
-        <tr>
-          <td><input type="submit" value="Absenden"   id="submitID1" /></td>
-          <td><input type="reset"  value="Rücksetzen" id="reset"
-          onclick="setTimeout('checkAllFields(\'\', \'formID1\')', 20);" /></td>
-        </tr>
-      </table>
-			<p id='infoLabel' class='infoLabel' />
+			<fieldset>
+				<legend>Testformular</legend>
+				<p>Die <span class='required'>rot</span> markierten Pflichtfelder (*) müssen ausgefüllt werden!</p>
+				<table>
+					<tr>
+						<td><span id="nameLbl" class='required'>Familienname (*): </span></td>
+						<td><input  id="nameFld" type="text" value="" /></td>
+					</tr>
+					<tr>
+						<td><span id="vornameLbl">Vorname: </span></td>
+						<td><input  id="vornameFld" type="text" value="" /></td>
+					</tr>
+					<tr>
+						<td><span id="plzLbl" class='required'>PLZ (*), vierstellig: </span></td>
+						<td><input  id="plzFld"  type="text" value="" placeholder='0000' /></td>
+					</tr>
+					<tr>
+						<td><span id="ortLbl" class='required'>Ort: </span></td>
+						<td><input  id="ortFld"  type="text" value="" placeholder='Ort' /></td>
+					</tr>
+					
+					<tr>
+						<td><input type="submit" value="Absenden"   id="submitID1" /></td>
+						<td><input type="reset"  value="Rücksetzen" id="reset"
+											 onclick="setTimeout('checkAllFields(\'\', \'formID1\')', 20);" /></td>
+					</tr>
+				</table>
+				<p id='infoLabel' class='infoLabel' />
+			</fieldset>
 		</form>
 		
 		<script type="text/javascript" src="formChecker.js"  ></script>
