--- a/check.xhtml
+++ b/check.xhtml
@@ -32,7 +32,7 @@
 						<td><input  id="plzFld"  type="text" value="" placeholder='0000' /></td>
 					</tr>
 					<tr>
-						<td><span id="ortLbl" class='required'>Ort: </span></td>
+						<td><span id="ortLbl" class='required'>Ort (*): </span></td>
 						<td><input  id="ortFld"  type="text" value="" placeholder='Ort' /></td>
 					</tr>
 					
