Email-Check noch in die Standardfelder aufgenommen. Neu ist mit TEST_EMAIL() eine weitere Funktion vorhanden. Damit existieren nun drei vorgegebene Funktionen: REQUIRED    : Muss Feld NOT_REQUIRED: Optionalfeld TEST_EMAIL  : E-Mailfeld ist gültig.

--- a/check.xhtml
+++ b/check.xhtml
@@ -34,6 +34,10 @@
 					<tr>
 						<td><span id="ortLbl" class='required'>Ort (*): </span></td>
 						<td><input  id="ortFld"  type="text" value="" placeholder='Ort' /></td>
+					</tr>					
+					<tr>
+						<td><span id="emailLbl" class='required'>EMail (*): </span></td>
+						<td><input  id="emailFld"  type="text" value="" placeholder='xyz@abc.com' /></td>
 					</tr>
 					
 					<tr>
@@ -47,7 +51,7 @@
 		</form>
 		
 		<script type="text/javascript" src="formChecker.js"  ></script>
-		<script type="text/javascript" src="ortPlzChecker.js"></script>
+		<script type="text/javascript" src="checkOrtPlzEmail.js"></script>
 
   </body>
 </html>
